--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-  "name": "generoi/wp-plugin-boilerplate",
+  "name": "generoi/wp-paywall",
   "type": "wordpress-plugin",
   "license": "MIT",
-  "description": "A boilerplate WordPress plugin",
-  "homepage": "https://github.com/generoi/wp-plugin-boilerplate",
+  "description": "A paywall plugin",
+  "homepage": "https://github.com/generoi/wp-paywall",
   "authors": [
     {
       "name": "Oskar Schöldström",
@@ -14,37 +14,31 @@
     "wordpress"
   ],
   "support": {
-    "issues": "https://github.com/generoi/wp-plugin-boilerplate/issues"
+    "issues": "https://github.com/generoi/wp-paywall/issues"
   },
   "repositories": [
     {
       "type": "composer",
       "url": "https://wpackagist.org"
-    },
-    {
-      "type": "composer",
-      "url": "https://packagist.minasithil.genero.fi/"
     }
   ],
   "require": {
-    "php": ">=7.0.0"
+    "php": ">=8.0.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^3.7",
-    "consolidation/robo": "^3.0",
-    "generoi/robo-genero": "dev-master"
+    "laravel/pint": "^1.17"
   },
   "autoload": {
     "psr-4": {
-      "GeneroWP\\PluginBoilerplate\\": "src/"
+      "GeneroWP\\Paywall\\": "src/"
     }
   },
   "scripts": {
     "test": [
-      "vendor/bin/phpcs"
+      "vendor/bin/pint"
     ]
   },
-  "archive" : {
+  "archive": {
     "exclude": [
       ".gitignore"
     ]
