--- a/package.json
+++ b/package.json
@@ -1,40 +1,45 @@
 {
-  "browserslist": [
-    "extends @wordpress/browserslist-config",
-    "not ie 11"
-  ],
+  "name": "wp-paywall",
   "private": true,
+  "browserslist": [
+    "extends @roots/browserslist-config/wordpress"
+  ],
+  "type": "module",
+  "packageManager": "npm@10.8.2",
   "scripts": {
-    "build": "cross-env NODE_ENV=development run-s mix",
-    "build:production": "cross-env NODE_ENV=production run-s mix",
-    "start": "cross-env NODE_ENV=development run-s \"mix -- --watch\"",
-    "hot": "cross-env NODE_ENV=development run-s build mix:hot",
-    "mix": "webpack --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "mix:hot": "webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "lint": "npm run -s lint:scripts && npm run -s lint:styles",
-    "lint:scripts": "eslint *.js src",
-    "lint:styles": "stylelint src/**/*.{css,scss}",
-    "test": "npm run -s lint && composer test"
+    "build": "bud build production --no-minimize",
+    "build:production": "bud build production",
+    "start": "bud build development",
+    "test": "node --no-warnings --run lint",
+    "lint": "node --no-warnings --run lint:prettier && node --no-warnings --run lint:js && node --no-warnings --run lint:css",
+    "lint:js": "eslint resources",
+    "lint:css": "stylelint \"resources/**/*.{css,scss,vue}\"",
+    "lint:prettier": "prettier . --check",
+    "lint:fix": "node --no-warnings --run lint:fix:prettier && node --no-warnings --run lint:fix:js && node --no-warnings --run lint:fix:css",
+    "lint:fix:prettier": "prettier . --write --list-different",
+    "lint:fix:js": "node --no-warnings --run lint:js -- --fix",
+    "lint:fix:css": "node --no-warnings --run lint:css -- --fix",
+    "ci:scripts": "eslint resources/scripts --format checkstyle",
+    "ci:styles": "stylelint -f json \"resources/**/*.{vue,css,sass,scss,less}\" 2>&1 | npx stylelint-checkstyle-reporter",
+    "translate": "node --no-warnings --run translate:pot && node --no-warnings --run translate:js",
+    "translate:pot": "wp i18n make-pot . ./resources/lang/sage.pot --ignore-domain --include=\"app,resources\"",
+    "translate:js": "wp i18n make-json ./resources/lang --pretty-print"
   },
   "devDependencies": {
-    "@tinypixelco/laravel-mix-wp-blocks": "^1.0.0",
-    "@wordpress/babel-preset-default": "^4.13.0",
-    "@wordpress/base-styles": "^2.0.0",
-    "@wordpress/browserslist-config": "^2.6.0",
-    "@wordpress/dependency-extraction-webpack-plugin": "^2.5.0",
-    "babel-eslint": "^10.1.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-react": "^7.20.5",
-    "glob": "^7.2.0",
-    "laravel-mix": "^5.0.4",
-    "npm-run-all": "^4.1",
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.26.3",
-    "sass-loader": "^8.0.2",
-    "stylelint": "^13.6.1",
-    "stylelint-config-standard": "^20.0.0",
-    "vue-template-compiler": "^2.6.12"
+    "@roots/bud": "^6.23.1",
+    "@roots/bud-eslint": "^6.23.1",
+    "@roots/bud-postcss": "^6.23.1",
+    "@roots/bud-preset-recommend": "^6.23.1",
+    "@roots/bud-preset-wordpress": "^6.23.1",
+    "@roots/bud-prettier": "^6.23.1",
+    "@roots/bud-sass": "^6.23.1",
+    "@roots/bud-stylelint": "^6.23.1",
+    "@roots/eslint-config": "^6.23.1",
+    "postcss-preset-env": "^10.0.0",
+    "stylelint-checkstyle-reporter": "^1.0.0",
+    "stylelint-config-standard-scss": "^13.1.0"
+  },
+  "dependencies": {
+    "@types/wordpress__blocks": "^12.5.14"
   }
 }
