--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
     "php": ">=8.0.0"
   },
   "require-dev": {
-    "laravel/pint": "^1.17"
+    "laravel/pint": "^1.17",
+    "phpunit/phpunit": "^9.0",
+    "wp-phpunit/wp-phpunit": "^6.6",
+    "yoast/phpunit-polyfills": "^2.0"
   },
   "autoload": {
     "psr-4": {
@@ -34,7 +37,10 @@
     }
   },
   "scripts": {
-    "test": [
+    "lint": [
+      "vendor/bin/pint --test"
+    ],
+    "lint:fix": [
       "vendor/bin/pint"
     ]
   },
