Use a paywall icon in admin bar

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
   "editor.css": "css/editor.37322c.css",
   "editor.js": "js/editor.896ca3.js",
+  "admin.css": "css/admin.439e98.css",
   "runtime.js": "js/runtime.c036bd.js",
   "entrypoints.json": "entrypoints.json"
 }
