--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     }
   ],
   "require": {
-    "php": ">=8.0.0"
+    "php": ">=8.0.0",
+    "symfony/http-foundation": "^7.1"
   },
   "require-dev": {
     "laravel/pint": "^1.17",
