--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
   ],
   "require": {
     "php": ">=8.0.0",
-    "symfony/http-foundation": "^7.1"
+    "symfony/http-foundation": "^7.1",
+    "firebase/php-jwt": "^6.10"
   },
   "require-dev": {
     "laravel/pint": "^1.17",
